# JPEG-decoder

./: Makefile  README.md  cal.py  main.py  marker.py  primitives.py  pyproject.toml
src/jpeg_decoder/: __init__.py  decoder.py  image.py  marker.py  ppm.py  reader.py
tests/: test_marker.py
